feature_new_enrollment_process: new UI create

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_documents.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_documents.xml
@@ -8,18 +8,17 @@
 
     <LinearLayout
         android:id="@+id/rideHistoryItem"
-        android:layout_width="690px"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15px"
-        android:background="@drawable/background_white_rounded_orange_bordered"
+        android:background="@drawable/background_white"
         android:orientation="vertical">
 
         <RelativeLayout
             android:id="@+id/relativeLayoutSelectPicture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24px"
+            android:layout_marginLeft="28px"
             android:gravity="center_horizontal">
 
             <TextView
@@ -28,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24px"
                 android:text="@string/Document_type"
-                android:textColor="@color/black"
+                android:textColor="@color/document_text_color"
                 android:textSize="36px"
                 />
 
@@ -72,12 +71,12 @@
 
             <ImageView
                 android:id="@+id/imageViewUploadDoc"
-                android:layout_width="90px"
-                android:layout_height="90px"
+                android:layout_width="120px"
+                android:layout_height="120px"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="20px"
-                android:background="@drawable/upload_doc_img"/>
+                android:src="@drawable/ic_addimage"/>
 
         </RelativeLayout>
 
@@ -93,21 +92,21 @@
         <RelativeLayout
             android:id="@+id/relativeLayoutImageStatus"
             android:layout_width="match_parent"
-            android:layout_height="186px"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="24px"
-            android:layout_marginTop="12px"
+            android:layout_marginTop="24px"
             android:visibility="visible"
             >
 
             <RelativeLayout
                 android:id="@+id/addImageLayout"
-                android:layout_width="160px"
-                android:layout_height="wrap_content"
+                android:layout_width="193px"
+                android:layout_height="193px"
                 android:layout_marginLeft="20px"
-                android:layout_marginRight="34px"
-                android:layout_marginTop="18px"
-                android:background="@drawable/background_white_rounded_orange_bordered"
+                android:layout_marginRight="28px"
+                android:layout_marginTop="10px"
+                android:background="@drawable/add_img_big"
                 android:orientation="vertical"
                 android:padding="0px"
                 android:visibility="visible">
@@ -118,6 +117,7 @@
                     android:layout_height="60px"
                     android:layout_marginLeft="50px"
                     android:layout_marginTop="24px"
+                    android:visibility="gone"
                     android:background="@drawable/image_icon"/>
 
                 <TextView
@@ -127,14 +127,16 @@
                     android:layout_below="@+id/image_icon"
                     android:layout_marginLeft="28px"
                     android:layout_marginTop="12px"
+                    android:visibility="gone"
                     android:text="@string/add_image"
                     android:textColor="@color/new_orange"
                     android:textSize="20px"/>
 
                 <ImageView
                     android:id="@+id/setCapturedImage"
-                    android:layout_width="160px"
-                    android:layout_height="160px"
+                    android:layout_width="173px"
+                    android:layout_height="173px"
+                    android:layout_centerInParent="true"
                     android:tag="mwar"/>
 
             </RelativeLayout>
@@ -144,18 +146,49 @@
                 android:layout_width="48px"
                 android:layout_height="48px"
                 android:src="@drawable/orange_cross"
-                android:layout_marginLeft="160px"
-                android:visibility="gone"
+                android:layout_marginLeft="173px"
+                android:visibility="visible"
                 android:tag="mwar"/>
+
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20px"
+                android:layout_marginLeft="28px"
+                android:layout_below="@+id/addImageLayout">
+
+                <TextView
+                    android:id="@+id/docStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/uploaded"
+                    android:layout_centerVertical="true"
+                    android:textColor="@color/new_orange"
+                    android:textSize="26px"/>
+
+                <ImageView
+                    android:id="@+id/imageViewDocStatusImage"
+                    android:layout_width="23px"
+                    android:layout_height="23px"
+                    android:layout_toRightOf="@+id/docStatus"
+                    android:layout_marginLeft="8px"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/orange_cross"
+                    android:visibility="visible"
+                    android:tag="mwar"/>
+
+            </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/addImageLayout2"
-                android:layout_width="160px"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20px"
-                android:layout_marginTop="16px"
+                android:layout_width="193px"
+                android:layout_height="193px"
+                android:layout_marginLeft="10px"
+                android:layout_marginTop="10px"
+                android:layout_marginRight="28px"
                 android:layout_toRightOf="@+id/addImageLayout"
-                android:background="@drawable/background_white_rounded_orange_bordered"
+                android:background="@drawable/add_img_big"
                 android:tag="mwar">
 
                 <ImageView
@@ -164,7 +197,7 @@
                     android:layout_height="60px"
                     android:layout_marginLeft="50px"
                     android:layout_marginTop="24px"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:background="@drawable/image_icon"/>
 
                 <TextView
@@ -175,14 +208,15 @@
                     android:layout_marginLeft="28px"
                     android:layout_marginTop="12px"
                     android:text="@string/add_image"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:textColor="@color/new_orange"
                     android:textSize="20px"/>
 
                 <ImageView
                     android:id="@+id/setCapturedImage2"
-                    android:layout_width="160px"
-                    android:layout_height="160px"
+                    android:layout_width="173px"
+                    android:layout_height="173px"
+                    android:layout_centerInParent="true"
                     android:tag="mwar"/>
 
             </RelativeLayout>
@@ -192,8 +226,19 @@
                 android:layout_width="48px"
                 android:layout_height="48px"
                 android:src="@drawable/orange_cross"
-                android:layout_marginLeft="369px"
+                android:layout_marginLeft="409px"
                 android:visibility="gone"
+                android:tag="mwar"/>
+
+            <ImageView
+                android:id="@+id/imageViewAddImageDisabled"
+                android:layout_width="193px"
+                android:layout_height="193px"
+                android:src="@drawable/add_img_dsble"
+                android:layout_marginLeft="10px"
+                android:layout_marginTop="10px"
+                android:layout_toRightOf="@+id/addImageLayout2"
+                android:visibility="visible"
                 android:tag="mwar"/>
 
             <RelativeLayout
@@ -210,22 +255,18 @@
                     android:layout_centerHorizontal="true"
                     android:src="@drawable/doc_uploaded"/>
 
-                <TextView
-                    android:id="@+id/docStatus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:gravity="center"
-                    android:layout_below="@+id/imageViewDocStatus"
-                    android:text="@string/uploaded"
-                    android:layout_marginTop="10px"
-                    android:textColor="@color/new_orange"
-                    android:textSize="20px"/>
-
             </RelativeLayout>
 
 
         </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/bottomLine"
+            android:layout_width="match_parent"
+            android:layout_height="2px"
+            android:layout_marginBottom="3px"
+            android:background="@color/grey_light"
+            android:layout_marginTop="22px"/>
 
     </LinearLayout>
 
