dynamic_delivery_changes: UI changes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -224,6 +224,7 @@
         android:layout_height="110px"
         android:layout_below="@+id/inRideCustomerInfoRl"
         android:layout_marginLeft="8px"
+        android:tag="mwar"
         android:background="@drawable/new_help_button"/>
 
 
